<resources>
    <string name="app_name" translatable="false">PNF Master</string>
    <string name="Introduction">作者: 那雨枫</string>
    <string name="usage">
        1. 应用介绍\n
        “PNF Master”是一款安卓应用，它通过蓝牙连接，可以对下肢康复机器人进行远程控制。
        本应用支持对电机速度、循环次数、运转模式等参数进行调节，以满足不同康复需求。\n\n
        2. 操作指南\n
        首先，用户需要点击右上角的蓝牙按钮连接设备。之后在操控页面点击连接电机按钮并选择电机参数，点击启动电机即可开始训练。\n
        用户可以通过右滑屏幕或者点击左上角菜单按钮呼出菜单。点击“我的资料”可以查看并编辑用户的个人信息和医疗信息；点击“我的参数”可以查看当前和历史参数，并且可以添加自定义参数或AI推荐参数。\n
        如果有更多问题，点击操控页面右下角的AI按钮来询问PNF Master哦。
    </string>
    <string name="userName">测试用户</string>
    <string name="currentDevice">当前设备</string>
    <string name="start_bluetooth">开启蓝牙</string>
    <string name="show_devices">查询配对设备</string>
    <string name="find_devices">搜索设备</string>
    <string name="connect_devices">连接设备</string>
    <string name="requestForBtPermission">您必须授权开启蓝牙相关功能才可以和康复机器人连接，请问您是否同意？</string>
    <string name="hint">在此输入要发送的信息</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">下一个</string>
    <string name="previous">上一个</string>
    <string name="UUID" translatable="false">00001101-0000-1000-8000-00805f9b34fb</string>
    <string name="welcome_register">欢迎注册PNF Master</string>
    <string name="poem">科技织梦，康复成诗。</string>
    <string name="Profile">我的资料</string>
    <string name="Control">操控页面</string>
    <string name="Tasks">我的参数</string>
    <string name="Logout">退出登录</string>
    <string name="defaultUserName">未登录用户</string>
    <string name="unknown_value">未知</string>
    <string name="new_user_hint">请完善个人信息，这有助于为您定制更好的训练计划。</string>
    <string name="rehabHint1">医疗专业人士对患者进行的评估和诊断，包括健康状况评估和病史等。</string>
    <string name="rehabHint2">制定针对患者的康复治疗方案，包括物理治疗、康复训练、药物治疗、康复辅助器具使用等。</string>
    <string name="rehabHint3">记录患者在康复治疗过程中的各种进展情况和改善情况的记录。</string>
    <string name="rehabHint4">制定针对患者个体化的康复目标，包括恢复功能、减轻疼痛、提高生活质量等方面。</string>
    <string name="loading">加载中…</string>
    <string name="noDeviceFound">当前无设备</string>
    <string name="DeviceName">设备名称</string>
    <string name="MacAddress">Mac地址</string>
    <string name="SignalStrength">信号强度</string>
    <string name="Name_">姓名：</string>
    <string name="Age_">年龄：</string>
    <string name="Gender_">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="Contact_">联系方式：</string>
    <string name="WhatIsYourName">您希望如何称呼您？</string>
    <string name="WhatIsYourGender">您的性别是？</string>
    <string name="WhatIsYourAge">您的年龄</string>
    <string name="WhatIsYourPhone">联系电话（选填）</string>
    <string name="NextStep">下一步</string>
    <string name="TasksOfToday">今日任务</string>
    <string name="BackToControl">返回</string>
    <string name="StartScanning">开始搜索</string>
    <string name="ChooseBtDevice">选择蓝牙设备</string>
    <string name="rehabInfoHint">最后一步：如果有的话，请完善以下康复信息。\n您之后可以随时修改这些信息。</string>
    <string name="_1_diagnosisinfo">1. 诊断信息：</string>
    <string name="_2_treatplan">2. 治疗方案：</string>
    <string name="_3_progressrecord">3. 康复进展记录：</string>
    <string name="_4_goals">4. 康复目标：</string>
    <string name="FinishRegister">完成注册</string>
    <string name="PersonalInfo"> 个人信息</string>
    <string name="MedicalInfo">" 医疗信息"</string>
    <string name="diagnosisinfo">诊断信息</string>
    <string name="treatplan">治疗方案</string>
    <string name="progressrecord">进展记录</string>
    <string name="goals">我的目标</string>
    <string name="UserName">用户名</string>
    <string name="Password">密码</string>
    <string name="ConfiremPassword">确认密码</string>
    <string name="RegisterNow">立即注册</string>
    <string name="RememberPassword">记住密码</string>
    <string name="Register">注册</string>
    <string name="Login">登录</string>
    <string name="skipLogin">跳过登录，直接进入</string>
    <string name="wrong_name_psw">用户名或密码错误</string>
    <string name="Hint">提示</string>
    <string name="Skip_hint">跳过登录仍然可以使用全部基础功能，但是无法使用个性化服务，建议您登录后使用。</string>
    <string name="BackToLogin">返回登录</string>
    <string name="UseDirectly">直接使用</string>
    <string name="changeLanguage">English</string>
    <string name="hello_">你好，</string>
    <string name="None">无</string>
    <string name="EnterHere">在此输入内容</string>
    <string name="send">发送</string>
    <string name="startTraining">开始训练</string>
    <string name="SearchBtDevices">搜索蓝牙设备</string>
    <string name="Help">使用帮助</string>
    <string name="DeveloperMode">调试模式</string>
    <string name="Settings">设置</string>
    <string name="not_connected_back">尚未与设备建立蓝牙连接。是否确定返回主界面？</string>
    <string name="Yes">确定</string>
    <string name="No">取消</string>
    <string name="StopScanning">停止搜索</string>
    <string name="ClickToConnect">与设备配对完成。再次点击设备名称即可连接</string>
    <string name="Pairring">正在配对中:</string>
    <string name="CancelPairring">取消配对：</string>
    <string name="startPairring">未配对：开始配对</string>
    <string name="buildSocketSuccess">Socket连接成功，可以开始训练。</string>
    <string name="timeout">连接超时</string>
    <string name="fail_not_pair">连接失败：尚未配对</string>
    <string name="msgSend">发送消息：</string>
    <string name="msgRcv">收到消息：</string>
    <string name="fail_no_connection">启动失败：尚未连接设备</string>
    <string name="endTraining">结束训练</string>
    <string name="break_connection">断开连接</string>
    <string name="intro">用法介绍</string>
    <string name="developerMode">确认进入调式模式？</string>
    <string name="logout">确定要退出登录吗？</string>
    <string name="notLoginYet">未登录用户无法使用此功能。是否现在登录？</string>
    <string name="not_filled_yet">尚未填写</string>
    <string name="save">保存</string>
    <string name="editUserInfo">修改个人信息</string>
    <string name="edit_success">修改成功</string>
    <string name="edit_fail">修改失败！</string>
    <string name="edit">编辑</string>
    <string name="NewUser">新用户注册</string>
    <string name="input_username_psw">请输入用户名和密码</string>
    <string name="not_the_same">密码与确认密码不一致！</string>
    <string name="already_exist">用户名已存在</string>
    <string name="enter_name">请填写您的姓名</string>
    <string name="enter_gender">请选择您的性别</string>
    <string name="enter_age">请填写您的年龄</string>
    <string name="permission_needed">需要权限</string>
    <string name="permission_BtScan_needed">必须取得蓝牙扫描权限才能使用此功能，请授权蓝牙扫描权限</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="basic_setting_header">基本设置</string>
    <string name="sync_header">Sync</string>

    <!-- Basic Settings Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="language_title">语言</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Permission_granted">蓝牙扫描权限已通过</string>
    <string name="Permission_rejected">您已拒绝授予扫描权限。</string>
    <string name="doubleBack">再次滑动以退出</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="position">位置</string>
    <string name="velocity">速度</string>
    <string name="current">电流</string>
    <string name="torque">力矩</string>
    <string name="startStretching">开始拉伸</string>
    <string name="hold">维持静止</string>
    <string name="add">加</string>
    <string name="chat_with_AI">点击此处与人工智能交流。</string>
    <string name="what_do_you_want_to_know">您想知道什么？</string>
    <string name="how_can_I_help">你好！我是PNF Master，请问你有什么需要帮助的呢？</string>
    <string name="backgroundPrompt">
        你是PNF Master软件里的内置AI，你的名字也叫PNF Master。这款软件的作者是那雨枫。这款软件有如下功能：当用户咨询app的使用帮助时，可以根据以下内容回答 - 用户在首页右上角点击蓝牙符号可以进入蓝牙连接界面。在该界面中点击右上角的“开始扫描”按钮开始蓝牙扫描，点击搜索到的设备进行连接。连接成功之后会自动返回主界面。注意：首次点击该按钮时需要授予应用相应权限； - 在主界面上有四个按钮，分别是“开始”、“发送”、“电机使能”和“电机失能”。点击“开始”按钮会与电机的蓝牙模块建立Socket连接，然后才可以进行其他操作。“电机使能”和“电机失能”按钮分别对应启动电机旋转和电机停止旋转； - 用户可以通过右滑屏幕或者点击左上角菜单按钮呼出菜单。点击“我的资料”可以查看并编辑用户的个人信息和医疗信息；点击“我的任务”可以查看当前和历史参数。右下角的AI按钮可以召唤我； - 点击“我的任务”可以设置电机产生的力的大小、电机停止位置和训练时间等训练参数。另外，AI也可以根据用户输入的医疗信息来推荐合适的康复方案.
    </string>
    <string name="copied_to_clipboard">已复制至粘贴板</string>
    <string name="you">你</string>
    <string name="thinking">正在思考中…</string>
    <string name="empty_input_not_allowed">输入不能为空</string>
    <string name="if_restart_activity">更改语言后将返回主界面。是否继续？</string>
    <string name="edit_params">编辑参数</string>
    <string name="AI_is_thinking">PNF Master正在思考中…</string>
    <string name="please_input_params">请先输入参数</string>
    <string name="saved">已保存</string>
    <string name="no_params">点击右上角，创建你的第一组参数吧</string>
    <string name="LowerLimit_">力的下限：</string>
    <string name="UpperLimit_">力的上限：</string>
    <string name="MotorPosition_">电机位置：</string>
    <string name="TrainingTime_">训练时长：</string>
    <string name="my_param">我的参数</string>
    <string name="are_you_sure_you_want_to_delete_this_parameter">确定删除这组参数吗？</string>
    <string name="delete">删除</string>
    <string name="build_connection">连接电机</string>
    <string name="change_params">更改参数</string>
    <string name="current_params">当前参数</string>
    <string name="AI_suggestion">PNF Master的建议参数</string>
    <string name="Params_Name_">参数名称：</string>
    <string name="my_params">我的参数</string>
    <string name="force_range_">力的范围：</string>
    <string name="min">最小值</string>
    <string name="max">最大值</string>
    <string name="clear">清空</string>
    <string name="motor_pos_range">电机位置（请输入0–10000的整数值）</string>
    <string name="training_time_sec">训练时间（单位为秒）</string>
    <string name="generate_params">生成推荐参数</string>
    <string name="save_params">保存参数</string>
    <string name="lower_limit_cannot_be_larger_than_upper_limit">力的下限不能大于上限，请重新输入</string>
    <string name="please_input_valid_params">请输入整数</string>
    <string name="load_failed_retry_or_input_manually">加载失败！请重试或手动输入</string>
    <string name="change_show_mode">切换显示模式</string>
    <string name="powerOn">电机开机</string>
    <string name="forceStop">电机急停</string>
    <string name="relax">开始放松</string>
    <string name="reStretching">再次拉伸</string>
    <string name="login_to_see_params">请登陆后查看参数</string>
    <string name="no_params_selected">尚未选择参数</string>
    <string name="connect_success">连接成功</string>
    <string name="more_thinking">这个问题有点难，PNF Master还在努力思考中...</string>
</resources>