<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbarNewUser"
            android:background="@color/teal_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_register"
            android:textSize="25sp"
            android:typeface="serif"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rehabInfoHint"
            android:textSize="15sp"
            android:typeface="monospace"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_diagnosisinfo"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"/>
        <EditText
            android:id="@+id/diagnosisInfo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/半透明"
            android:hint="@string/rehabHint1"
            android:padding="10dp"
            android:textSize="16sp"
            android:gravity="start"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_treatplan"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"/>
        <EditText
            android:id="@+id/treatmentPlan"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="start"
            android:background="@color/半透明"
            android:hint="@string/rehabHint2"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_progressrecord"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"/>
        <EditText
            android:id="@+id/progressRecord"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="start"
            android:background="@color/半透明"
            android:hint="@string/rehabHint3"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_goals"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"/>
        <EditText
            android:id="@+id/goals"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="start"
            android:background="@color/半透明"
            android:hint="@string/rehabHint4"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FinishRegister"
            android:textSize="18sp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>
</ScrollView>
