<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/parameter_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Params_Name_"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/parameter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_params"
            android:background="@color/半透明"
            android:textSize="16sp"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/parameter_title_layout"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/force_range_"
            android:textSize="16sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/forceLowerLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/半透明"
            android:hint="@string/min"
            android:textSize="16sp"
            android:padding="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" — "
            tools:ignore="HardcodedText" />
        <EditText
            android:id="@+id/forceUpperLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/半透明"
            android:hint="@string/max"
            android:textSize="16sp"
            android:padding="10dp"
            android:gravity="center"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </LinearLayout>

    <EditText
        android:id="@+id/motor_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/motor_pos_range"
        android:background="@color/半透明"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <EditText
        android:id="@+id/training_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/training_time_sec"
        android:background="@color/半透明"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/motor_position" />
    <Button
        android:id="@+id/generate_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_params"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/training_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/save_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_params"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/generate_parameters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/save_parameters"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>