<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:background="@drawable/bg">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:background="@color/teal_200"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/curDeviceHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentDevice"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/curDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/None"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@id/curDeviceHint"
            app:layout_constraintBaseline_toBaselineOf="@id/curDeviceHint"/>

        <TextView
            android:id="@+id/curParamsHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_params"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/curDeviceHint"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp" />
        <TextView
            android:id="@+id/curParams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/None"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@id/curParamsHint"
            app:layout_constraintBaseline_toBaselineOf="@id/curParamsHint" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="8dp"
            android:background="@drawable/txt_radius_border"
            android:backgroundTint="@color/半透明"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/curParams">
            <TextView
                android:id="@+id/receiveText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/curDevice" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/init_layout"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/enableBtn"
                style="@style/common_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/enable" />
            <Button
                android:id="@+id/disableBtn"
                style="@style/common_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/init_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/scrollView"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/StartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_connection"
                style="@style/common_button1"
                android:layout_marginEnd="40dp"/>
            <Button
                android:id="@+id/ChangeParamsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_params"
                style="@style/common_button1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Introduction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_ai"
            android:contentDescription="@string/chat_with_AI" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        android:elevation="8dp"/>
</androidx.drawerlayout.widget.DrawerLayout>


